<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_count_down_message"
        android:text="Enter time first!"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_count_down_timer"
        android:text="@string/count_down_init_timer"
        android:textSize="60sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/text_count_down_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/buttons_count_down"
        app:layout_constraintTop_toBottomOf="@+id/text_count_down_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_count_down_start"
            android:text="@string/count_down_start_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintDimensionRatio="3:1"
            app:layout_constraintHorizontal_bias="0.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_count_down_pause"
            android:text="@string/count_down_pause_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintDimensionRatio="3:1"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintLeft_toRightOf="@+id/button_count_down_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </android.support.constraint.ConstraintLayout>

    <EditText
        android:id="@+id/count_down_edit_timer"
        android:hint="@string/count_down_hint_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/buttons_count_down"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</android.support.constraint.ConstraintLayout>