<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/text_app_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_summary"
        android:textSize="25sp"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.5"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_stop_watch"
        android:text="@string/stop_watch_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_app_summary"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintDimensionRatio="3:1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_count_down"
        android:text="@string/count_down_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/button_stop_watch"
        app:layout_constraintTop_toBottomOf="@+id/text_app_summary"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintDimensionRatio="3:1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/fragment_stop_watch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="5dp"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <FrameLayout
        android:id="@+id/fragment_count_down"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="5dp"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

</android.support.constraint.ConstraintLayout>